add keyword expansion
